Fix twine upload to pypi command
Before this change it failed with:
Unknown distribution format: 'dist'

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
              source venv/bin/activate
              python setup.py bdist_wheel --universal
              pip install twine
-             twine upload --username "${PYPI_USERNAME}" --password "${PYPI_PASSWORD}" dist
+             twine upload --username "${PYPI_USERNAME}" --password "${PYPI_PASSWORD}" dist/*
 workflows:
   version: 2
   build_and_deploy:
